apisix/apisix-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  # apisix-ingress-controller is only interested in Ingress
  # resources with the matched ingressClass name, in our case,
  # it's apisix.
  ingressClassName: apisix
  rules:
  - http:
      paths:
        - path: /whoami
          pathType: Prefix
          backend:
            service:
              name: whoami
              port:
                number: 80
